--- a/templates/shared/site_header_component.html
+++ b/templates/shared/site_header_component.html
@@ -92,7 +92,13 @@
                                     </li>
                                     <li class="ml-3">
                                         <a href="{% url 'blog_app:blog_list' %}"
-                                           class="{% if request.resolver_match.url_name == 'blog_app:blog_list' %}active{% endif %}">وبلاگ</a>
+                                           class="{% if request.resolver_match.url_name == 'blog_app:blog_list' %}active{% endif %}">مقاله ها</a>
+                                    </li>
+                                    <li class="ml-3">
+                                        <a href="{% url 'media_app:lecture_list_page' %}">سخنرانی ها</a>
+                                    </li>
+                                    <li class="ml-3">
+                                        <a href="{% url 'media_app:gallery_page' %}">تصاویر</a>
                                     </li>
                                     <li class="ml-3">
                                         <a href="{% url 'main_app:about_us_page' %}">درباره ما</a>
@@ -100,13 +106,10 @@
                                     <li class="ml-3">
                                         <a href="{% url 'main_app:contact_us_page' %}">تماس با ما</a>
                                     </li>
+                                    <li class="ml-3">
+                                        <a href="{% url 'main_app:table_table_page' %}">برنامه هیئت</a>
+                                    </li>
 
-                                    <li class="ml-3">
-                                        <a href="{% url 'media_app:gallery_page' %}">تصاویر</a>
-                                    </li>
-                                    <li class="ml-3">
-                                        <a href="{% url 'media_app:lecture_list_page' %}">سخنرانی ها</a>
-                                    </li>
 
                                 </ul>
                             </nav>
