--- a/templates/shared/_layout.html
+++ b/templates/shared/_layout.html
@@ -8,19 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>{% block title %}ادوکا{% endblock %}</title>
+    <title>{% block title %}نبی اکرم(ص){% endblock %}</title>
    {% include 'shared/header_references.html' %}
 </head>
 
 <body>
-{% comment %}
-<div class="preloader">
-    <div class="loader">
-        <svg class="spinner" viewBox="0 0 50 50">
-            <circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle>
-        </svg>
-    </div>
-</div>{% endcomment %}
 {% render_partial 'main_app.views.site_header_component' %}
 {% block content %}{% endblock %}
 {% render_partial 'main_app.views.site_footer_component' %}
