--- a/templates/shared/site_header_component.html
+++ b/templates/shared/site_header_component.html
@@ -33,7 +33,7 @@
                                         ادمین</a></li>
                                     <li class="d-flex align-items-center pr-3 mr-3 border-left border-left-gray"><i
                                             class="la la-user mr-1"></i><a
-                                            href="{% url 'account_app:user_panel_dashboard_page' %}">
+                                            href="{% url 'userprofile_app:user_panel_dashboard_page' %}">
                                         حساب کاربری</a></li>
                                     <li class="d-flex align-items-center pr-3 mr-3 border-left border-left-gray"><i
                                             class="la la-sign-out mr-1"></i><a
@@ -42,7 +42,7 @@
                                 {% else %}
                                     <li class="d-flex align-items-center pr-3 mr-3 border-left border-left-gray"><i
                                             class="la la-user mr-1"></i><a
-                                            href="{% url 'account_app:user_panel_dashboard_page' %}">
+                                            href="{% url 'userprofile_app:user_panel_dashboard_page' %}">
                                         حساب کاربری</a></li>
                                     <li class="d-flex align-items-center pr-3 mr-3 border-left border-left-gray"><i
                                             class="la la-sign-out mr-1"></i><a
