--- a/templates/shared/dashboard.html
+++ b/templates/shared/dashboard.html
@@ -463,7 +463,7 @@
             </li>
 
             <li>
-                <a href="{% url 'account_app:user_list' %}">
+                <a href="{% url 'userprofile_app:user_list' %}">
                     <svg class="mr-2" xmlns="http://www.w3.org/2000/svg" height="18px" viewBox="0 0 24 24" width="18px">
                         <path d="M0 0h24v24H0V0z" fill="none"></path>
                         <path
